--- a/app/src/main/res/layout/fragment_running_player.xml
+++ b/app/src/main/res/layout/fragment_running_player.xml
@@ -3,14 +3,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.fragments.RunningPlayerFragment"
     android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="runner"
-        android:textColor="#f00"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/running_cover"
+            android:layout_width= "250dp"
+            android:layout_height="250dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/running_"
+
+            android:src="@mipmap/ic_launcher"/>
+
+
+        <LinearLayout
+            android:id="@+id/running_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/running_cover"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="vertical"
+            android:layout_marginTop="0dp"
+            android:gravity="center"
+            >
+
+
+            <com.google.android.material.slider.Slider
+                android:id="@+id/running_slider"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_margin="10dp"
+                app:layout_constraintBottom_toTopOf="@id/running_"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/running_cover" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageButton
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="transparent"
+                android:src="@drawable/baseline_skip_previous_24"/>
+
+            <ImageButton
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="transparent"
+                android:src="@drawable/baseline_play_arrow_24"/>
+
+            <ImageButton
+                android:layout_weight="1"
+
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="transparent"
+                android:src="@drawable/baseline_skip_next_24"/>
+        </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
