Criação de icons, slider/dragger adicionado e funcionando com sets para fragments

--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -5,7 +5,7 @@
     android:name="com.example.mp3.fragments.ItemFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.ItemFragment">
+    tools:context=".view.fragments.TrackFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
