--- a/app/src/main/res/layout/fragment_running_player.xml
+++ b/app/src/main/res/layout/fragment_running_player.xml
@@ -22,6 +22,49 @@
 
             android:src="@mipmap/ic_launcher"/>
 
+        <TextView
+            android:id="@+id/running_title"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:textColor="@color/black"
+
+            app:layout_constraintTop_toBottomOf="@id/running_cover"
+            app:layout_constraintBottom_toTopOf="@id/running_"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:gravity="center"
+            android:textSize="25sp"
+            tools:text="NOME NOME NOME NOME"
+            />
+
+        <TextView
+            android:id="@+id/running_timePassed"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintStart_toStartOf="@id/running_"
+            app:layout_constraintBottom_toTopOf="@id/running_"
+
+            android:layout_marginStart="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            />
+
+        <TextView
+            android:id="@+id/running_timeTotal"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="@id/running_"
+            app:layout_constraintBottom_toTopOf="@id/running_"
+
+            android:layout_marginEnd="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+
+            />
 
         <LinearLayout
             android:id="@+id/running_"
@@ -34,44 +77,50 @@
             android:orientation="vertical"
             android:layout_marginTop="0dp"
             android:gravity="center"
+
+            android:clickable="true"
+            android:focusable="true"
             >
 
 
-            <com.google.android.material.slider.Slider
+            <androidx.appcompat.widget.AppCompatSeekBar
                 android:id="@+id/running_slider"
                 android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:layout_margin="10dp"
-                app:layout_constraintBottom_toTopOf="@id/running_"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_height="20dp"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/running_cover" />
+                android:progress="100"
+                style="?android:attr/progressBarStyleHorizontal" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageButton
+                android:id="@+id/running_previous"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:background="transparent"
+                android:layout_height="70dp"
+                android:background="@color/white"
                 android:src="@drawable/baseline_skip_previous_24"/>
 
             <ImageButton
+                android:id="@+id/running_play_pause"
                 android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:background="transparent"
+                android:layout_height="70dp"
+                android:background="@color/white"
                 android:src="@drawable/baseline_play_arrow_24"/>
 
             <ImageButton
+                android:id="@+id/running_next"
                 android:layout_weight="1"
-
                 android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:background="transparent"
+                android:layout_height="70dp"
+                android:background="@color/white"
                 android:src="@drawable/baseline_skip_next_24"/>
         </LinearLayout>
 
