--- a/app/src/main/res/layout/fragment_running_player.xml
+++ b/app/src/main/res/layout/fragment_running_player.xml
@@ -13,119 +13,113 @@
 
         <ImageView
             android:id="@+id/running_cover"
-            android:layout_width= "250dp"
+            android:layout_width="250dp"
             android:layout_height="250dp"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/running_"
+            app:layout_constraintBottom_toTopOf="@id/running_slider"
 
-            android:src="@mipmap/ic_launcher"/>
-
+            tools:src="@mipmap/ic_launcher"
+            />
         <TextView
             android:id="@+id/running_title"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:textColor="@color/black"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
 
-            app:layout_constraintTop_toBottomOf="@id/running_cover"
-            app:layout_constraintBottom_toTopOf="@id/running_"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:gravity="center"
-            android:textSize="25sp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
             tools:text="NOME NOME NOME NOME"
+            android:maxLines="1"
+
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="@id/running_cover"
+            app:layout_constraintTop_toBottomOf="@id/running_cover"
             />
+
 
         <TextView
             android:id="@+id/running_timePassed"
+
             android:layout_width="40dp"
             android:layout_height="wrap_content"
 
-            app:layout_constraintStart_toStartOf="@id/running_"
-            app:layout_constraintBottom_toTopOf="@id/running_"
+            android:layout_marginStart="15dp"
 
-            android:layout_marginStart="10dp"
-            android:textSize="18sp"
-            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="@id/running_slider"
+            app:layout_constraintBottom_toTopOf="@id/running_slider"
             />
-
         <TextView
             android:id="@+id/running_timeTotal"
+
             android:layout_width="40dp"
             android:layout_height="wrap_content"
 
-            app:layout_constraintEnd_toEndOf="@id/running_"
-            app:layout_constraintBottom_toTopOf="@id/running_"
-
             android:layout_marginEnd="10dp"
-            android:textSize="18sp"
-            android:textColor="@color/black"
+
+            app:layout_constraintEnd_toEndOf="@id/running_slider"
+            app:layout_constraintBottom_toTopOf="@id/running_slider"
+            />
+
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/running_slider"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+
+            android:progress="100"
+            style="?android:attr/progressBarStyleHorizontal"
+
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="60dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/running_cover"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+
+        <ImageButton
+            android:id="@+id/running_previous"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/baseline_skip_previous_24"
+
+            android:layout_marginEnd="20dp"
+
+            app:layout_constraintEnd_toStartOf="@id/running_play_pause"
+            app:layout_constraintTop_toTopOf="@id/running_play_pause"
+            />
+        <ImageButton
+            android:id="@+id/running_play_pause"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/baseline_play_arrow_24"
+
+            android:layout_marginTop="10dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/running_slider"
+            />
+        <ImageButton
+            android:id="@+id/running_next"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/baseline_skip_next_24"
+
+            android:layout_marginStart="20dp"
+
+            app:layout_constraintStart_toEndOf="@id/running_play_pause"
+            app:layout_constraintTop_toTopOf="@id/running_play_pause"
 
             />
 
-        <LinearLayout
-            android:id="@+id/running_"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/running_cover"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:orientation="vertical"
-            android:layout_marginTop="0dp"
-            android:gravity="center"
 
-            android:clickable="true"
-            android:focusable="true"
-            >
-
-
-            <androidx.appcompat.widget.AppCompatSeekBar
-                android:id="@+id/running_slider"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-
-                android:progress="100"
-                style="?android:attr/progressBarStyleHorizontal" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageButton
-                android:id="@+id/running_previous"
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="70dp"
-                android:background="@color/white"
-                android:src="@drawable/baseline_skip_previous_24"/>
-
-            <ImageButton
-                android:id="@+id/running_play_pause"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:layout_width="0dp"
-                android:layout_height="70dp"
-                android:background="@color/white"
-                android:src="@drawable/baseline_play_arrow_24"/>
-
-            <ImageButton
-                android:id="@+id/running_next"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="70dp"
-                android:background="@color/white"
-                android:src="@drawable/baseline_skip_next_24"/>
-        </LinearLayout>
-
-        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
